--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,17 @@
     "@types/node": "^12.20.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "firebase": "^8.2.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "build:style": "tailwind build src/index.css -o src/tailwind.css",
+    "start": "npm run build:style && react-scripts start",
     "build": "react-scripts build && mv build ../dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,6 +44,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
+    "autoprefixer": "^10.2.4",
+    "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.0.3"
   }
 }
