--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.1",
+    "firebase-admin": "^9.5.0",
+    "graphql": "^15.5.0",
     "helm": "^0.2.1",
     "helmet": "^4.4.1",
     "signale": "^1.4.0"
