--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.21.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
     "express-session": "^1.17.1",
     "firebase-admin": "^9.5.0",
     "graphql": "^15.5.0",
-    "helm": "^0.2.1",
+    "graphql-subscriptions": "^1.2.0",
+    "graphql-tools": "^5.0.0",
     "helmet": "^4.4.1",
-    "signale": "^1.4.0"
+    "merge-graphql-schemas": "^1.7.8",
+    "signale": "^1.4.0",
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
@@ -35,7 +38,6 @@
     "@types/helmet": "^4.0.0",
     "@types/signale": "^1.4.1",
     "concurrently": "^5.3.0",
-    "express-csp-header": "^4.0.0",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
