--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
         "skipLibCheck": true,
         "sourceMap": true,
         "allowSyntheticDefaultImports": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
     },
     "compileOnSave": true,
     "exclude": [
@@ -18,6 +18,5 @@
     ],
     "include": [
         "./src/*",
-        "decs.d.ts"
     ]
 }
