--- a/package.json
+++ b/package.json
@@ -4,14 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "start": "",
-    "dev:server": "ts-node-dev --respawn --require dotenv/config src/index.ts",
-    "dev:client": "npm run start --prefix ./client",
-    "install:all": "npm i ; npm i --prefix ./client",
-    "build": "rm -rf dist ; mkdir dist ; concurrently \"npm run build:server\" \"npm run build:client\"",
-    "build:server": "tsc",
-    "build:client": "npm run build --prefix ./client"
+    "dev": "ts-node-dev --respawn --require dotenv/config src/index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -24,12 +19,8 @@
     "express-session": "^1.17.1",
     "firebase-admin": "^9.5.0",
     "graphql": "^15.5.0",
-    "graphql-subscriptions": "^1.2.0",
-    "graphql-tools": "^5.0.0",
     "helmet": "^4.4.1",
-    "merge-graphql-schemas": "^1.7.8",
-    "signale": "^1.4.0",
-    "subscriptions-transport-ws": "^0.9.18"
+    "signale": "^1.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
@@ -37,7 +28,6 @@
     "@types/express-session": "^1.17.0",
     "@types/helmet": "^4.0.0",
     "@types/signale": "^1.4.1",
-    "concurrently": "^5.3.0",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
